--- a/springmvcapp1/src/main/webapp/WEB-INF/web.xml
+++ b/springmvcapp1/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,12 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<!-- Below lines not required if we have used servlet name mentioned above 
 			appended with "-servlet.xml" -->
+		<!-- http://stackoverflow.com/questions/3652090/difference-between-applicationcontext-xml-and-spring-servlet-xml-in-spring-frame, 
+			http://stackoverflow.com/questions/14954931/my-application-could-not-open-servletcontext-resource, 
+			http://docs.spring.io/spring/docs/current/spring-framework-reference/html/mvc.html#mvc-servlet, 
+			http://stackoverflow.com/questions/11708967/what-is-the-difference-between-applicationcontext-and-webapplicationcontext-in-s, 
+			http://stackoverflow.com/questions/600095/splitting-applicationcontext-to-multiple-files/28693991#28693991, 
+			http://stackoverflow.com/questions/9016122/contextloaderlistener-or-not -->
 		<!-- <init-param> -->
 		<!-- <param-name>contextConfigLocation</param-name> -->
 		<!-- <param-value>/WEB-INF/springmvc-app1-servlet.xml</param-value> -->
@@ -16,20 +22,23 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
+		<!-- http://stackoverflow.com/questions/4140448/difference-between-and-in-servlet-mapping-url-pattern, 
+			http://javapapers.com/servlet/what-is-servlet-mapping/ -->
 		<servlet-name>springmvc-app1</servlet-name>
 		<!-- using /* in url mapping will cause issue when loading jsp files, requested 
 			resource not found on server. As every request has to go thru dispacher servlet 
 			and dont have mapping for jsp files or user /app/* in url mapping -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<!-- Below lines not required if we have used servlet name mentioned above 
-		appended with "-servlet.xml" -->
+	<!-- Below is used for loading application context related beans other than 
+		controllers and view resolvers(Ex: business objects, data sources, jdbc, 
+		security etc.) also called root context -->
 	<!-- <listener> -->
 	<!-- <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
 	<!-- </listener> -->
 	<!-- <context-param> -->
 	<!-- <param-name>contextConfigLocation</param-name> -->
-	<!-- <param-value>/WEB-INF/springmvc-app1-servlet.xml</param-value> -->
+	<!-- <param-value>/WEB-INF/applicationContext.xml</param-value> -->
 	<!-- </context-param> -->
 	<welcome-file-list>
 		<welcome-file>welcome.jsp</welcome-file>
